--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ben McKay</title>
+  <title>Ben McKay GIS Portfolio</title>
 
   <style>
     h1 {text-align: center;
