--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
        alt="1995 Tree Distribution"
        align="left"
        width="50%"
-       height="400">
+       height="50%">
   <img src=
          "https://user-images.githubusercontent.com/109936302/182289662-28f2ee5d-b057-4f55-8a47-751b32be9645.png"
        alt="2015 Tree Distribution"
        align="right"
        width="50%"
-       height="400">
+       height="50%">
 </p>
 
 <p>The Matplotlib package was also utilised within PostgreSQL <b> Or python double check with Dad </b> to produce maps,
