--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
          "https://user-images.githubusercontent.com/109936302/182289659-8a5b1bb6-2a4c-414f-a71e-7719a16c627d.png"
        alt="1995 Tree Distribution"
        align="left"
-       width="50%"
-       height="50%">
+       width="400"
+       height="400">
   <img src=
          "https://user-images.githubusercontent.com/109936302/182289662-28f2ee5d-b057-4f55-8a47-751b32be9645.png"
        alt="2015 Tree Distribution"
        align="right"
-       width="50%"
-       height="50%">
+       width="400"
+       height="400">
 </p>
 
 <p>The Matplotlib package was also utilised within PostgreSQL <b> Or python double check with Dad </b> to produce maps,
