--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   Science (GIS). Appended below are various examples of GIS work and other programming work I've done during the course
   of my study.
 </p>
-<h2> Folium Map displaying various Airbnb statistics in San Francisco </h2>
+<h2> Interactive Folium Map displaying various Airbnb statistics in San Francisco </h2>
 <p><iframe src="BNB.html" width="800" height="400" resize="both"></iframe></p>
 <p>Following the sourcing of airbnb data from <a href ="http://insideairbnb.com/san-francisco">InsideAirbnb</a>,
   I was able to perform a query using PostgreSQL to create a Folium map with the Folium package, with the following
