--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 <h2>Network Analysis (ArcMap)</h2>
 <p>I performed a network analysis on Mt Eden Train Station in Auckland, NZ to calculate the catchment area to identify
   how many people would walk to the train station.
+<p align="center">
+ <img width="516" alt="Mt_Eden_Catchment" src="https://user-images.githubusercontent.com/109936302/182570155-816119c2-3969-4bc6-b675-edf36806b424.png">
+</p>
   
 <h2>Shoreline Change Analysis (ArcMap) </h2>
 <p> I performed an analysis on shoreline change at Whangamata Beach (left) and further north of Whangamata (right) 
