--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <img width="500" alt="Thematic Map 2" src="https://user-images.githubusercontent.com/109936302/182570660-a8cf64ee-6fd9-4b91-89b4-348467bf37e2.png">
 
 <h2>Network Analysis (ArcMap)</h2>
-<p>I performed a network analysis on Mt Eden Train Station in Auckland, NZ to calculate the catchment area to identify
+<p>I performed a network analysis on Mt Eden Train Station in Auckland, NZ to calculate the catchment area for
   how many people would walk to the train station.
 <p align="center">
  <img width="516" alt="Mt_Eden_Catchment" src="https://user-images.githubusercontent.com/109936302/182570155-816119c2-3969-4bc6-b675-edf36806b424.png">
