--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 <h2>Shoreline Change Analysis (ArcMap) </h2>
 <p> I performed an analysis on shoreline change at Whangamata Beach (left) and further north of Whangamata (right) 
   to identify the pattern of movement by georeferencing historical aerial photographs.</p>
-<p>
+  
   <img width="400" alt="Whanga Beach" src="https://user-images.githubusercontent.com/109936302/182306331-f54efcb3-b373-4bbf-b7a7-90b1b2f97af7.png" align="left"  height="400">
-  <img width="400" alt="North Whanga" src="https://user-images.githubusercontent.com/109936302/182306419-5ab24284-3f23-4d4d-827d-25ca7efd8079.png" align="right"  height="400">
-</p>
+  <img width="400" alt="North Whanga" src="https://user-images.githubusercontent.com/109936302/182306419-5ab24284-3f23-4d4d-827d-25ca7efd8079.png" height="400">
+
   
 <p>One of the tools used was DSAS (Digital Shoreline Analysis System) which displayed the Net Shoreline Movement (m)
   results in 10m transects over the approximate 80 year period of aerial photographs (1944 - 2020). Allowing me to
