--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 <h1>Ben McKay - Portfolio of GIS Work</h1>
-<p> I am a undergraduate of University of Auckland, with a double major in Marine Science and Geographic Information
+<p> I am an undergraduate of University of Auckland, with a double major in Marine Science and Geographic Information
   Science (GIS). 
   Appended below are various examples of GIS work and other programming work I've done during the course
   of my study.
