--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <h1>Ben McKay - Portfolio of GIS Work</h1>
 <p> I am an undergraduate of University of Auckland, with a double major in Marine Science and Geographic Information
   Science (GIS). 
-  Appended below are various examples of GIS work and other programming work I've done during the course
+  <br>Appended below are various examples of GIS work and other programming work I've done during the course
   of my study.
 </p>
 <h2> Interactive Folium Map displaying various Airbnb statistics in San Francisco </h2>
