--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <p> I performed an analysis on shoreline change at Whangamata Beach (left) and further north of Whangamata (right) 
   to identify the pattern of movement by georeferencing historical aerial photographs.</p>
   
-  <img width="400" alt="Whanga Beach" src="https://user-images.githubusercontent.com/109936302/182306331-f54efcb3-b373-4bbf-b7a7-90b1b2f97af7.png" align="left"  height="400">
+  <img width="400" alt="Whanga Beach" src="https://user-images.githubusercontent.com/109936302/182306331-f54efcb3-b373-4bbf-b7a7-90b1b2f97af7.png" align="middle"  height="400">
   <img width="400" alt="North Whanga" src="https://user-images.githubusercontent.com/109936302/182306419-5ab24284-3f23-4d4d-827d-25ca7efd8079.png" height="400">
 
   
