--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
   <img src=
          "https://user-images.githubusercontent.com/109936302/182289659-8a5b1bb6-2a4c-414f-a71e-7719a16c627d.png"
        alt="1995 Tree Distribution"
-       align="left"
+       align="middle"
        width="375"
        height="300">
   <img src=
          "https://user-images.githubusercontent.com/109936302/182289662-28f2ee5d-b057-4f55-8a47-751b32be9645.png"
        alt="2015 Tree Distribution"
-       align="right"
+       align="middle"
        width="375"
        height="300">
 </p>
@@ -76,7 +76,7 @@
 <p>Thematic maps were also used to display the various deforested areas in Heilongjiang Province of Northeast China in 2000 (right), 
   finding a pattern of deforested areas concentrating near river and stream channels. </p>
 
-<img width="400" alt="Thematic Map AGC distribution" src="https://user-images.githubusercontent.com/109936302/182570388-c5851869-9029-4331-b0dc-d82cb1f2fc6f.png" align="left">
+<img width="400" alt="Thematic Map AGC distribution" src="https://user-images.githubusercontent.com/109936302/182570388-c5851869-9029-4331-b0dc-d82cb1f2fc6f.png" align="middle">
 <img width="500" alt="Thematic Map 2" src="https://user-images.githubusercontent.com/109936302/182570660-a8cf64ee-6fd9-4b91-89b4-348467bf37e2.png">
 
 <h2>Network Analysis (ArcMap)</h2>
