--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <p>Thematic maps were also used to display the various deforested areas in Heilongjiang Province of Northeast China in 2000 (right), 
   finding a pattern of deforested areas concentrating near river and stream channels. </p>
 
-<img width="400" alt="Thematic Map AGC distribution" src="https://user-images.githubusercontent.com/109936302/182570388-c5851869-9029-4331-b0dc-d82cb1f2fc6f.png" align="middle">
+<img width="400" alt="Thematic Map AGC distribution" src="https://user-images.githubusercontent.com/109936302/182570388-c5851869-9029-4331-b0dc-d82cb1f2fc6f.png">
 <img width="500" alt="Thematic Map 2" src="https://user-images.githubusercontent.com/109936302/182570660-a8cf64ee-6fd9-4b91-89b4-348467bf37e2.png">
 
 <h2>Network Analysis (ArcMap)</h2>
@@ -90,7 +90,7 @@
 <p> I performed an analysis on shoreline change at Whangamata Beach (left) and further north of Whangamata (right) 
   to identify the pattern of movement by georeferencing historical aerial photographs.</p>
   
-  <img width="400" alt="Whanga Beach" src="https://user-images.githubusercontent.com/109936302/182306331-f54efcb3-b373-4bbf-b7a7-90b1b2f97af7.png" align="middle"  height="400">
+  <img width="400" alt="Whanga Beach" src="https://user-images.githubusercontent.com/109936302/182306331-f54efcb3-b373-4bbf-b7a7-90b1b2f97af7.png" height="400">
   <img width="400" alt="North Whanga" src="https://user-images.githubusercontent.com/109936302/182306419-5ab24284-3f23-4d4d-827d-25ca7efd8079.png" height="400">
 
   
