--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
   <img width="1705" alt="Folium Code" src="https://user-images.githubusercontent.com/109936302/182288746-8383abb5-250c-49ca-a835-86b5567a6c28.png" align="middle">
 </p>
 <h2>Matplotlib Map displaying tree census data (red) in New York City for 1995 (left) and 2015 (right)</h2>
+<p>The Matplotlib package was also utilised within Python to produce maps,
+  <br>as seen above with two maps showing the change in tree distribution in New York City between 1995 and 2015 using tree
+  <br>census data sourced from <a href ="https://www.kaggle.com/datasets/nycparks/tree-census">Kaggle</a>.</p>
 <p>
   <img src=
          "https://user-images.githubusercontent.com/109936302/182289659-8a5b1bb6-2a4c-414f-a71e-7719a16c627d.png"
@@ -65,9 +68,6 @@
        height="300">
 </p>
 
-<p>The Matplotlib package was also utilised within Python to produce maps,
-  as seen above with two maps showing the change in tree distribution in New York City between 1995 and 2015 using tree
-  census data sourced from <a href ="https://www.kaggle.com/datasets/nycparks/tree-census">Kaggle</a>.</p>
 
 <h2>Thematic Maps (ArcGIS Pro)</h3>
 <p>I created numerous thematic maps on ArcGIS Pro, including a thematic map that displays the above ground carbon distribution (AGC) 
