--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
   <img width="1705" alt="Folium Code" src="https://user-images.githubusercontent.com/109936302/182288746-8383abb5-250c-49ca-a835-86b5567a6c28.png" align="middle">
 </p>
 <h2>Matplotlib Map displaying tree census data (red) in New York City for 1995 (left) and 2015 (right)</h2>
-<p>The Matplotlib package was also utilised within Python to produce maps,
-  <br>as seen above with two maps showing the change in tree distribution in New York City between 1995 and 2015 using tree
-  <br>census data sourced from <a href ="https://www.kaggle.com/datasets/nycparks/tree-census">Kaggle</a>.</p>
+<p>The Matplotlib package was also utilised within Python to produce maps, as seen above with two maps showing the change in tree distribution in New York City between 1995 and 2015 using treecensus data sourced from <a href ="https://www.kaggle.com/datasets/nycparks/tree-census">Kaggle</a>.</p>
 <p>
   <img src=
          "https://user-images.githubusercontent.com/109936302/182289659-8a5b1bb6-2a4c-414f-a71e-7719a16c627d.png"
@@ -76,7 +74,7 @@
 <p>Thematic maps were also used to display the various deforested areas in Heilongjiang Province of Northeast China in 2000 (right), 
   finding a pattern of deforested areas concentrating near river and stream channels. </p>
 <p>
-  <img width="400" alt="Thematic Map AGC distribution" src="https://user-images.githubusercontent.com/109936302/182570388-c5851869-9029-4331-b0dc-d82cb1f2fc6f.png">
+  <img width="500" alt="Thematic Map AGC distribution" src="https://user-images.githubusercontent.com/109936302/182570388-c5851869-9029-4331-b0dc-d82cb1f2fc6f.png">
   <img width="500" alt="Thematic Map 2" src="https://user-images.githubusercontent.com/109936302/182570660-a8cf64ee-6fd9-4b91-89b4-348467bf37e2.png">
 </p>
 <h2>Network Analysis (ArcMap)</h2>
@@ -89,10 +87,10 @@
 <h2>Shoreline Change Analysis (ArcMap) </h2>
 <p> I performed an analysis on shoreline change at Whangamata Beach (left) and further north of Whangamata (right) 
   to identify the pattern of movement by georeferencing historical aerial photographs.</p>
-  
+<p>
   <img width="400" alt="Whanga Beach" src="https://user-images.githubusercontent.com/109936302/182306331-f54efcb3-b373-4bbf-b7a7-90b1b2f97af7.png" height="400">
   <img width="400" alt="North Whanga" src="https://user-images.githubusercontent.com/109936302/182306419-5ab24284-3f23-4d4d-827d-25ca7efd8079.png" height="400">
-
+</p>
   
 <p>One of the tools used was DSAS (Digital Shoreline Analysis System) which displayed the Net Shoreline Movement (m)
   results in 10m transects over the approximate 80 year period of aerial photographs (1944 - 2020). Allowing me to
@@ -121,7 +119,7 @@
   <img width="470" alt="NDVI Analysis" src="https://user-images.githubusercontent.com/109936302/182568665-df7fa60c-11c3-4622-b97f-9b6e391f957b.png">
 </p>  
 
-  <h2>R</h2>
+<h2>R</h2>
 <p>R was used within Marine Science to create plots such as the forest plot seen above. This forest plot was used for a
   meta-analysis report to identify any patterns between similar studies for consistent response variables. </p>
 <p>
