--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
 
 <h2>Thematic Maps (ArcGIS Pro)</h3>
 <p>I created numerous thematic maps on ArcGIS Pro, including a thematic map that displays the above ground carbon distribution (AGC) 
-  for shrubland and forestry in Auckland (left) enabling the ability to identify any patterns. </p>
-  
-<p>Thematic maps were also used to display the various deforested areas in Heilongjiang Province of Northeast China in 2000 (right), 
+  for shrubland and forestry in Auckland (left) enabling the ability to identify any patterns.
+<br>Thematic maps were also used to display the various deforested areas in Heilongjiang Province of Northeast China in 2000 (right), 
   finding a pattern of deforested areas concentrating near river and stream channels. </p>
 <p>
   <img width="500" alt="Thematic Map AGC distribution" src="https://user-images.githubusercontent.com/109936302/182570388-c5851869-9029-4331-b0dc-d82cb1f2fc6f.png">
